chore: Migrate spec module to JSpecify annotations for null-safety (#638)
- Add @NullMarked to io.a2a.spec package
- Apply @Nullable annotations to optional fields and parameters
- Move builder validation to build() methods using
Assert.checkNotNullParam()
- Fix null-safety issues in RequestContext ID generation
- Add null checks for push notification configuration
- Simplify REST route handling for push notification configs
- Update tests to provide required MessageSendConfiguration

Signed-off-by: Emmanuel Hugonnet <ehugonne@redhat.com>